# functional-schemas

./: .gitignore  ECS_DATA_STANDARD.md  README.md  TO_DISCUSS.md  pyproject.toml
data_lib/: libraries_v0.1.0.md
data_lib/functions/python/: agent_w_enrichment.py  coerce_json.py
data_lib/functions/python/models.py/: model_enrich_agent.py  triage_agent.py
data_lib/types/python/: types_required.md
intelligence_reports_ecs/: triage_report.json
schemas/base/: __VERSION__  agent_base_schema_v0.1.0.json
